# RayTracing

./: .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp
raytracing/: CMakeLists.txt
raytracing/include/color/: Image.h  RGB.h  Spectrum.h
raytracing/include/geometry/: Matrix.h  Point2D.h  Point3D.h  Sphere.h  Surface.h  Torus.h  Triangle.h  types.h
raytracing/include/modelling/: Camera.h  Emitter.h  Material.h  NormalMap.h  Primitive.h  Texture.h  World.h
raytracing/include/rendering/: Image.h  RenderScene.h  render.h
raytracing/src/color/: Image.cpp  RGB.cpp  Spectrum.cpp
raytracing/src/geometry/: Sphere.cpp  Surface.cpp  Torus.cpp  Triangle.cpp
raytracing/src/modelling/: Camera.cpp  Emitter.cpp  Material.cpp  NormalMap.cpp  Primitive.cpp  Texture.cpp
raytracing/src/rendering/: Image.cpp  render.cpp
